--- a/cssdoc.css
+++ b/cssdoc.css
@@ -10,7 +10,7 @@ body{
     border: 2px solid #FFFFFF;
 }
 .botn   {
-    background-color: #371E01;
+    background-color: #EC532B;
     text-decoration: none;
     color: #FFFFFF;
     padding-top: 12px;
@@ -79,7 +79,7 @@ div img .logoC {
 
 
 .cuerpo .fon_ca {
-    background-color: #5A1819;
+    background-color: #933018;
     padding-top: 15px;
     padding-right: 15px;
     padding-bottom: 15px;
@@ -99,7 +99,7 @@ div img .logoC {
 .cuerpo .fin {
     height: 100px;
     text-align: center;
-    background-color: #0B0201;
+    background-color: #933018;
     margin-top: 0px;
     margin-right: -8px;
     margin-left: -8px;
