--- a/cssdoc.css
+++ b/cssdoc.css
@@ -100,14 +100,16 @@ div img .logoC {
     height: 100px;
     text-align: center;
     background-color: #933018;
-    margin-top: 0px;
     margin-right: -8px;
     margin-left: -8px;
-    margin-bottom: -14px;
-    padding-top: 2px;
-    padding-right: 2px;
-    padding-bottom: 2px;
-    padding-left: 2px;
+    margin-bottom: -18px;
+    padding-top: 10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    font-size: small;
+    display: block;
+    margin-top: 40px;
 }
 .cuerpo {
 
