--- a/cssdoc.css
+++ b/cssdoc.css
@@ -1,118 +1,142 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swarp');
+*{
+    padding: 0px;
+    margin: 0px;
+    font-family: Montserrat, sans-serif;
+}
+
 body{
-    font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, "sans-serif";
-    background: #000000;
-    color: #FFFFFF;
-	align: center;
+    background-color: rgb(46, 46, 46) ;
+}
+.contenedor{
+    background-color: rgb(46, 46, 46);
+    display: grid;
 }
 
-.logoC {
-    border-radius: 150px;
-    border: 2px solid #FFFFFF;
+.cabeza-titulo{
+    background-color: rgb(26, 26, 26);
+    padding: 20px;
+    display: grid;
+    place-items: center;
+    border-radius: 10px;
+    margin: 10px;
+    color: #fff;
+    font-size: 80%;
 }
-.botn   {
-    background-color: #EC532B;
+
+.cabeza-foto{
+
+    margin: 0px 10px 10px 10px;
+    padding: 5px 10px 15px 10px;
+    border-radius: 10px;
+    text-align: center;
+    background-image: linear-gradient(to bottom, rgba(255, 61, 2, 0.5) 0%, rgba(82, 37, 7, 0.3) 100%), url(/img/lap.jpg);
+    background-size: cover;
+    background-position: top center;
+    position: relative;
+    display: grid;
+    place-items: center;
+}
+
+.circle{
+    background-color: rgb(29, 29, 29);
+    border-radius: 100%;
+    width: 130px;
+    height: 130px;
+    border: 10px solid rgb(243, 97, 13);
+    display: grid;
+    place-items: center;
+    transition: 1s ease;
+    transition-property: border, background-color;
+}
+
+.circle:hover{
+    border: 10px solid rgb(170, 40, 0);
+    background-color: black;
+}
+
+img{
+    width: 75px;
+    height: 75px;
+}
+
+h3{
+    padding: 20px;
+    color: #fff;
+}
+
+.descrip{
+    padding: 30px 10px 10px 10px;
+    color: #fff;
+}
+
+.servicio{
+    text-align: center;
+    margin: 0px 10px 10px 10px;
+    padding: 0px;
+}
+
+.boton-servicio{
+    color: #fff;
+    font-weight: bold;
+    font-size: 1.2em;
     text-decoration: none;
-    color: #FFFFFF;
-    padding-top: 12px;
-    padding-right: 12px;
-    padding-bottom: 12px;
-    padding-left: 12px;
+    background: none;
+    padding: 30px;
+    margin: 0px;
+    border-radius: 10px;
+    background-color: rgb(250, 93, 2);
     display: block;
-    border-radius: 100px;
-    width: 250px;
-    text-align: center;
-    margin-top: 16px;
-    margin-right: 16px;
-    margin-bottom: 16px;
-    margin-left: 16px;
+    width: auto;
+    transition: .5s ease background-color;
 }
-.botn:hover   {
-    background-color: #772100;
+
+.boton-servicio:hover{
+    color: #fff;
+    background-color: rgb(109, 29, 5);
+}
+
+.contacto{
+    background-color: rgb(255, 255, 255);
+    margin: 0px 10px;
+    padding: 25px;
+    text-align: center;
+    border-radius: 10px;
+}
+
+.titulo-contacto{
+    padding: 0px 0 15px 0;
+    font-weight: bold;
+    color: rgb(255, 81, 0);
+    font-size: 1.2em;
+}
+
+.boton{
     text-decoration: none;
-    color: #FFFFFF;
-    padding-top: 12px;
-    padding-right: 12px;
-    padding-bottom: 12px;
-    padding-left: 12px;
+    padding: 15px 0px;
+    margin: 1em;
     display: block;
-    border-radius: 100px;
-    width: 250px;
-    text-align: center;
-    margin-top: 16px;
-    margin-right: 16px;
-    margin-bottom: 16px;
-    margin-left: 16px;
+    color: #fff;
+    background-color: rgb(255, 72, 0);
+    border-radius: 10em;
+    transition: .5s ease;
+    transition-property: color, background-color;
 }
 
-
-
-
-
-div img .logoC {
-    vertical-align: middle;
-    text-align: justify;
-
-
-
-
-
-
-}
-
-
-.cuerpo .img_me {
-    text-align: center;
-    margin-top: 25px;
-
-
-}
-.cuerpo .desc-d {
-    vertical-align: middle;
+.boton:hover{
     display: block;
-    width: 250px;
-    position: inherit;
-    font-family: "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, Arial, sans-serif;
+    color: #fff;
+    background-color: rgb(41, 13, 6);
+}
+
+.final{
+    display: grid;
+    align-items: center;
     text-align: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
-}
-
-
-.cuerpo .fon_ca {
-    background-color: #933018;
-    padding-top: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
-    padding-left: 15px;
-    margin-top: -8px;
-    margin-right: -8px;
-    margin-left: -8px;
-}
-.cuerpo .fon_ca .cabeza {
-    width: 200px;
-    text-align: center;
-    font-family: Gotham, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-decoration: none;
-    text-indent: 0px;
-    margin-left: 14px;
-}
-.cuerpo .fin {
-    height: 80px;
-    text-align: center;
-    background-color: #933018;
-    margin-right: -8px;
-    margin-left: -8px;
-    margin-bottom: -18px;
-    padding-top: 16px;
-    padding-right: 16px;
-    padding-bottom: 16px;
-    padding-left: 16px;
-    font-size: small;
-    display: block;
-    margin-top: 37px;
-}
-.cuerpo {
-    height: 646px;
-
-
+    padding: 50px;
+    margin: 10px 10px 10px 10px;
+    background-color: black;
+    color: #fff;
+    border-radius: 10px;
+    font-size: 12px;
 }
