--- a/css/servicios.css
+++ b/css/servicios.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,700&display=swarp');
 *{
-    margin: 0;
-    padding: 0;
+    padding: 0px;
+    margin: 0px;
     font-family: Montserrat, sans-serif;
 }
 
