--- a/css/servicios.css
+++ b/css/servicios.css
@@ -16,7 +16,7 @@ body{
 
 .tituservi{
     background-color: rgb(26, 26, 26);
-    padding: 10px;
+    padding: 7.5px;
     display: flex;
 	place-items: center;
     border-radius: 10px;
@@ -32,9 +32,17 @@ body{
     background: none;
     background-color: rgb(14, 14, 14);
     color: #fff;
-    padding: 20px 25px;
+    padding: 15px 20px;
     border-radius: 10px;
     font-size: 15px;
+    transition: .5s ease;
+    transition-property: color, background-color, border-radius;
+}
+
+.cerra:hover{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border-radius: 50px;
 }
 
 .nomser{
