--- a/css/index.css
+++ b/css/index.css
@@ -8,29 +8,20 @@
 body{
     background-color: rgb(46, 46, 46) ;
 }
-
-.contenservi{
+.contenedor{
     background-color: rgb(46, 46, 46);
-    display: block;
+    display: grid;
 }
 
-.tituservi{
+.cabeza-titulo{
     background-color: rgb(26, 26, 26);
-    padding: 10px;
-    display: flex;
-	place-items: center;
+    padding: 20px;
+    display: grid;
+    place-items: center;
     border-radius: 10px;
     margin: 10px;
     color: #fff;
     font-size: 80%;
-	width: auto;
-
-}
-
-.nomser{
-    display: inline-flex;
-	margin: auto;
-    padding: 10px;
 }
 
 /*inicio de boton*/
@@ -41,22 +32,12 @@ body{
 
 .continer-boton{
     margin: auto;
-    left: 97%;
-    margin: -64px;
+    left: 84.4%;
+    margin: 20px;
 }
 
 #toggle{
     display: none;
-}
-
-.botom{
-    z-index: 999;
-    width: 43px;
-    height: 43px;
-    background: rgb(0, 0, 0);
-    border-radius: 100%;
-    transition: all 0.5s ease-in-out;
-    cursor: pointer;
 }
 
 .botom::before{
@@ -70,6 +51,16 @@ body{
     background: #fff;
     transform: rotate(90deg);
 
+}
+
+.botom{
+    z-index: 999;
+    width: 43px;
+    height: 43px;
+    background: rgb(0, 0, 0);
+    border-radius: 100%;
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
 }
 
 .botom::after{
@@ -124,62 +115,120 @@ a{
 #toggle:checked ~ .botom{
     transform: rotate(135deg);
 }
+
 /*final de boton*/
 
-.comen{
-    display: grid;
-    place-items: center;
-    text-align: center;
-    background-image: linear-gradient(to bottom, rgba(255, 61, 2, 0.5) 0%, rgba(82, 37, 7, 0.3) 100%), url(/img/serv.jpg);
-    padding: 80px 20px;
-    margin: 0px 10px;
-    color: #fff;
+.cabeza-foto{
+
+    margin: 0px 10px 10px 10px;
+    padding: 5px 10px 15px 10px;
     border-radius: 10px;
+    text-align: center;
+    background-image: linear-gradient(to bottom, rgba(255, 61, 2, 0.5) 0%, rgba(82, 37, 7, 0.3) 100%), url(/img/lap.jpg);
     background-size: cover;
     background-position: top center;
     position: relative;
-}
-
-.secc{
-    background-color: rgb(255, 255, 255);
-    display: block;
+    display: grid;
     place-items: center;
-    padding: 40px 20px;;
-    margin: 10px;
-    border-radius: 10px;
-    display: block;
-    width: auto;
-
 }
 
-.boti{
-    text-decoration: none;
-    text-align: center;
-    background: none;
-    background-color: rgb(243, 97, 13);
+.circle{
+    background-color: rgb(29, 29, 29);
+    border-radius: 100%;
+    width: 130px;
+    height: 130px;
+    border: 10px solid rgb(243, 97, 13);
+    display: grid;
+    place-items: center;
+    transition: 1s ease;
+    transition-property: border, background-color;
+}
+
+.circle:hover{
+    border: 10px solid rgb(170, 40, 0);
+    background-color: black;
+}
+
+img{
+    width: 75px;
+    height: 75px;
+}
+
+h3{
+    padding: 20px;
     color: #fff;
+}
+
+.descrip{
+    padding: 30px 10px 10px 10px;
+    color: #fff;
+}
+
+.servicio{
+    text-align: center;
+    margin: 0px 10px 10px 10px;
+    padding: 0px;
+}
+
+.boton-servicio{
+    color: #fff;
+    font-weight: bold;
+    font-size: 1.2em;
+    text-decoration: none;
+    background: none;
+    padding: 30px;
+    margin: 0px;
+    border-radius: 10px;
+    background-color: rgb(250, 93, 2);
     display: block;
     width: auto;
-    place-items: center;
-    padding: 60px 20px;
-    margin: 10px 30px;
+    transition: .5s ease background-color;
+}
+
+.boton-servicio:hover{
+    color: #fff;
+    background-color: rgb(109, 29, 5);
+}
+
+.contacto{
+    background-color: rgb(255, 255, 255);
+    margin: 0px 10px;
+    padding: 25px;
+    text-align: center;
     border-radius: 10px;
+}
+
+.titulo-contacto{
+    padding: 0px 0 15px 0;
+    font-weight: bold;
+    color: rgb(255, 81, 0);
+    font-size: 1.2em;
+}
+
+.boton{
+    text-decoration: none;
+    padding: 15px 0px;
+    margin: 1em;
+    display: block;
+    color: #fff;
+    background-color: rgb(255, 72, 0);
+    border-radius: 10em;
     transition: .5s ease;
     transition-property: color, background-color;
 }
 
-.boti:hover {
+.boton:hover{
     display: block;
     color: #fff;
-    background-color: rgb(41, 13, 6)
+    background-color: rgb(41, 13, 6);
 }
 
-.final-servicio {
+.final{
     display: grid;
     align-items: center;
     text-align: center;
     padding: 50px;
-    margin: 0px 10px 10px 10px;
+    margin: 10px 10px 10px 10px;
     background-color: black;
     color: #fff;
     border-radius: 10px;
